

                              Kiji Schema Release Notes

Version 1.0.0-rc5
  * SCHEMA-247. The ls tool can no longer perform get and scan.
  * SCHEMA-241. Change audience annotations of KijiDeleter,
      KijiIncrementer, and KijiPutter to @ApiAudience.Public.
  * SCHEMA-139. KijiTableKeyValueDatabase methods return the true
      instance type, not the interface type.
  * SCHEMA-248. Kiji.modifyTableLayout() no longer takes a table name.
      The Kiji.modifyTableLayout() methods that take a String name are
      now deprecated.
  * SCHEMA-223. Adds backup methods to KijiSystemTable and SystemTable 
      backup to MetadataTool.
  * SCHEMA-244. Kiji.createTable() now takes a TableLayoutDesc object.
      The Kiji.createTable() methods that take a KijiTableLayout object
      are deprecated.
  * SCHEMA-233. Extract kiji get functionality out of kiji ls.
  * SCHEMA-242. Enforce constraint of no non-hashed components
      in a FORMATTED row key with SuppressKeyMaterialization=true.
  * SCHEMA-141. Improved KijiTablePool API.
  * SCHEMA-234. Extract kiji scan functionality out of kiji ls.
  * SCHEMA-219. Adds KijiWriterFactory with access in KijiTable and
      AtomicKijiPutter with access in KijiUtilityWriterFactory.
  * SCHEMA-103. Remove ColumnNameTranslator from public API.
  * SCHEMA-140. Update API for metatable backups. This changes the
      backup format. Please re-backup your tables using the new API.
  * SCHEMA-136. Make KijiRowKeySplitter a non-static class. Get an instance
      with the KijiRowKeySplitter.get() method.
  * SCHEMA-145. Change KijiColumnFilter.Context to abstract class.
  * SCHEMA-199. VALID_INSTANCE_NAME should not match the empty string.
  * SCHEMA-9. Add a CLI tool for KijiSchema System Table.
      supports putting and getting properties from the system table.
  * SCHEMA-198. KijiColumnName validates family names using
      KijiNameValidator. KijiInvalidNameException is unchecked.