@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc5
+  * SCHEMA-207. KijiURIBuilder supports relative paths to
+      DEFAULT_HBASE_URI.
   * SCHEMA-247. The ls tool can no longer perform get and scan.
   * SCHEMA-241. Change audience annotations of KijiDeleter,
       KijiIncrementer, and KijiPutter to @ApiAudience.Public.
